k8s-configs/ping-cloud/base/pingfederate/base/admin-limits.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate-admin
spec:  
  template:
    spec:
      containers:
      - name: pingfederate-admin
        resources:
          limits:
            memory: "1Gi"
            cpu: 1
          requests:
            memory: "1Gi"
            cpu: 1
