k8s-configs/ping-cloud/base/pingfederate/base/deployment.yaml
# This defines the pingfederate admin deployment.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate-admin
  labels:
    cluster: pingfederate-cluster
    role: pingfederate-admin
spec:
  selector:
    matchLabels:
      role: pingfederate-admin
  replicas: 1
  progressDeadlineSeconds: 900
  # Recreate strategy will force admin to completely be removed from cluster
  # and recreate new admin upon deployment. This will avoid error of
  # 2 admins in 1 cluster.
  strategy:
    type: Recreate
  template:
    metadata:
      name: pingfederate-admin
      labels:
        cluster: pingfederate-cluster
        role: pingfederate-admin
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingfederate-admin
        image:  pingidentity/pingfederate:200109-10.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        ports:
        - containerPort: 9999
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingfederate-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400

---

#
# This defines the pingfederate runtime engine  deployment.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate
  labels:
    cluster: pingfederate-cluster
    role: pingfederate-engine
spec:
  progressDeadlineSeconds: 900
  selector:
    matchLabels:
      role: pingfederate-engine
  template:
    metadata:
      name: pingfederate-engine
      labels:
        cluster: pingfederate-cluster
        role: pingfederate-engine
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingfederate
        image:  pingidentity/pingfederate:200109-10.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        ports:
        - containerPort: 9031
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingfederate-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
