k8s-configs/ping-cloud/base/pingfederate/base/statefulset.yaml
# This defines the pingfederate admin statefulset.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate-admin
  labels:
    cluster: pingfederate-cluster
    role: pingfederate-admin
spec:
  serviceName: pingfederate-admin
  selector:
    matchLabels:
      role: pingfederate-admin
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingfederate-admin
      labels:
        cluster: pingfederate-cluster
        role: pingfederate-admin
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingfederate-admin
        image: pingcloud-mirror.jfrog.io/pingidentity/pingfederate:2010-10.1.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: server-profile
          mountPath: /opt/staging/hooks/02-get-remote-server-profile.sh.pre
          subPath: 02-get-remote-server-profile.sh.pre
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /usr/local/bin/skbn
          subPath: skbn
        - name: data-dir
          mountPath: /opt/staging/native-s3-ping.jar
          subPath: native-s3-ping.jar
        - name: out-dir
          mountPath: /opt/out
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - mountPath: /etc/podinfo
          name: podinfo
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/85-pf-admin-readiness.sh ]
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pf-admin-liveness.sh ]
          initialDelaySeconds: 90
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        ports:
        - containerPort: 9999
      volumes:
      - name: podinfo
        downwardAPI:
          items:
            - path: labels
              fieldRef:
                fieldPath: metadata.labels
            - path: annotations
              fieldRef:
                fieldPath: metadata.annotations
            - path: cpu_limit
              resourceFieldRef:
                containerName: pingfederate-admin
                divisor: 1m
                resource: limits.cpu
            - path: cpu_request
              resourceFieldRef:
                containerName: pingfederate-admin
                divisor: 1m
                resource: requests.cpu
      - name: ssh-dir
        emptyDir: {}
      - name: server-profile
        configMap:
          name: server-profile
          defaultMode: 0644
      - name: data-dir
        emptyDir: {}
      - name: pingfederate-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingfederate-gp2
      resources:
        requests:
          storage: 20Gi

---

#
# This defines the pingfederate runtime/engine statefulset.
#
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingfederate
  labels:
    cluster: pingfederate-cluster
    role: pingfederate-engine
spec:
  selector:
    matchLabels:
      role: pingfederate-engine
  serviceName: pingfederate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingfederate-engine
      labels:
        cluster: pingfederate-cluster
        role: pingfederate-engine
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each PF runtime pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingfederate-engine
                topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: pingfederate
        image: pingcloud-mirror.jfrog.io/pingidentity/pingfederate:2010-10.1.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: server-profile
          mountPath: /opt/staging/hooks/02-get-remote-server-profile.sh.pre
          subPath: 02-get-remote-server-profile.sh.pre
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /usr/local/bin/skbn
          subPath: skbn
        - name: data-dir
          mountPath: /opt/staging/native-s3-ping.jar
          subPath: native-s3-ping.jar
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - mountPath: /etc/podinfo
          name: podinfo
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pf-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pf-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        ports:
        - containerPort: 9031
      volumes:
      - name: podinfo
        downwardAPI:
          items:
            - path: labels
              fieldRef:
                fieldPath: metadata.labels
            - path: annotations
              fieldRef:
                fieldPath: metadata.annotations
            - path: cpu_limit
              resourceFieldRef:
                containerName: pingfederate
                divisor: 1m
                resource: limits.cpu
            - path: cpu_request
              resourceFieldRef:
                containerName: pingfederate
                divisor: 1m
                resource: requests.cpu
      - name: ssh-dir
        emptyDir: {}
      - name: server-profile
        configMap:
          name: server-profile
          defaultMode: 0644
      - name: data-dir
        emptyDir: {}
      - name: pingfederate-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
