k8s-configs/ping-cloud/base/pingfederate/base/service.yaml
#
# This service exposes the pingfederate admin port to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: pingfederate-admin
  labels:
    role: pingfederate-admin
spec:
  ports:
  - port: 9999
    name: pingfederate-admin
  selector:
    role: pingfederate-admin
---
#
# This service exposes the pingfederate runtime ports to the cluster.
#
apiVersion: v1
kind: Service
metadata:
  name: pingfederate
spec:
  ports:
  - port: 9031
    name: pingfederate-runtime
  selector:
    role: pingfederate-engine
---
#
# This is the PingFederate cluster communication service
#
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: pingfederate-cluster
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: pingfederate-cluster-bind
      protocol: TCP
      port: 7600
      targetPort: 7600
    - name: pingfederate-cluster-health
      protocol: TCP
      port: 7700
      targetPort: 7700
  selector:
     cluster: pingfederate-cluster
